re PR middle-end/49029 (ICE in simplify_subreg, at simplify-rtx.c:5266)

PR middle-end/49029
	* expmed.c (extract_fixed_bit_field): Test whether target can be used
	only after deciding which mode to use.

	* gcc.c-torture/compile/pr49029.c: New test.

From-SVN: r174036